Closed Bug 1671623 Opened 4 years ago Closed 4 years ago

FdPrintf.cpp:70:19: error: call of overloaded ‘log10(long unsigned int&)’ is ambiguous

Categories

(Core :: Memory Allocator, defect, P1)

Unspecified
Other
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:81.0) Gecko/20100101 Firefox/81.0

Steps to reproduce:

Fix for Bug 1656155 caused on Solaris build failure:

gmake[3]: Entering directory '/builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/memory/replace/logalloc'
memory/replace/logalloc/FdPrintf.o
/builds/psumbera/FIREFOX/epoll/g++ -std=gnu++17 -o FdPrintf.o -c  -I/builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/dist/system_wrappers -include /builds/psumbera/FIREFOX/config/gcc_hidden.h -fstack-protector-strong -DDEBUG=1 -DMOZ_REPLACE_MALLOC_PREFIX=logalloc -DMOZ_NO_MOZALLOC -DMOZ_HAS_MOZGLUE -DIMPL_MFBT -I/builds/psumbera/FIREFOX/memory/replace/logalloc -I/builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/memory/replace/logalloc -I/builds/psumbera/FIREFOX/memory/build -I/builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/dist/include -I/builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/dist/include/nspr -I/builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wduplicated-cond -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wformat -Wformat-overflow=2 -Werror=implicit-function-declaration -Wno-psabi -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -fno-omit-frame-pointer -funwind-tables  -MD -MP -MF .deps/FdPrintf.o.pp   /builds/psumbera/FIREFOX/memory/replace/logalloc/FdPrintf.cpp
cc1plus: warning: ‘-Werror=’ argument ‘-Werror=implicit-function-declaration’ is not valid for C++
/builds/psumbera/FIREFOX/memory/replace/logalloc/FdPrintf.cpp: In instantiation of ‘unsigned int NumDigits(T) [with T = long unsigned int]’:
/builds/psumbera/FIREFOX/memory/replace/logalloc/FdPrintf.cpp:123:46:   required from here
/builds/psumbera/FIREFOX/memory/replace/logalloc/FdPrintf.cpp:70:19: error: call of overloaded ‘log10(long unsigned int&)’ is ambiguous
   70 |   double l = log10(n);
      |              ~~~~~^~~
In file included from /usr/gcc/9/lib/gcc/x86_64-pc-solaris2.11/9.3.0/include-fixed/math.h:24,
                 from /usr/gcc/9/include/c++/9.3.0/cmath:45,
                 from /builds/psumbera/FIREFOX/obj-x86_64-pc-solaris2.11/dist/system_wrappers/cmath:3,
                 from /builds/psumbera/FIREFOX/memory/replace/logalloc/FdPrintf.cpp:14:
/usr/gcc/9/lib/gcc/x86_64-pc-solaris2.11/9.3.0/include-fixed/iso/math_iso.h:209:21: note: candidate: ‘long double std::log10(long double)’
  209 |  inline long double log10(long double __X) { return __log10l(__X); }
      |                     ^~~~~
/usr/gcc/9/lib/gcc/x86_64-pc-solaris2.11/9.3.0/include-fixed/iso/math_iso.h:170:15: note: candidate: ‘float std::log10(float)’
  170 |  inline float log10(float __X) { return __log10f(__X); }
      |               ^~~~~
/usr/gcc/9/lib/gcc/x86_64-pc-solaris2.11/9.3.0/include-fixed/iso/math_iso.h:70:15: note: candidate: ‘double std::log10(double)’
   70 | extern double log10 __P((double));
      |               ^~~~~
gmake[3]: *** [/builds/psumbera/FIREFOX/config/rules.mk:725: FdPrintf.o] Error 1
Regressed by: 1670529, 1656155
Assignee: nobody → petr.sumbera
URL: 1656155
Status: UNCONFIRMED → ASSIGNED
Component: Untriaged → Memory Allocator
Ever confirmed: true
OS: Unspecified → Other
Priority: -- → P1
Product: Firefox → Core
No longer regressed by: 1670529
Has Regression Range: --- → yes
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
URL: 1656155
See Also: → 1656155

The patch landed in nightly and beta is affected.
:petr.sumbera, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(petr.sumbera)
Flags: needinfo?(petr.sumbera)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: