Bug 1671623 - don't overloaded log10 r=pbone

Differential Revision: https://phabricator.services.mozilla.com/D93762